--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -51,15 +51,14 @@
                         <br>
                         <br><i>"what kind of music do you like?"</i>, or, <i>"what's your favorite music?"</i>
                         <br>
-                        <br>maybe this question is easier to answer for others than it is for me. i don't really consciously listen to music in my free time.
-                        i spend so much of my working hours listening to music, analyzing it, picking it apart, that i don't know if it helps me relax or pass the time.
+                        <br>maybe this question is easier to answer for others than it is for me. i don't really listen to music in my free time, and i spend so much
+                        of my working hours listening to music, analyzing it, picking it apart, that i don't know if it helps me relax or pass the time.
                         <br>
-                        <br>i dread this question, because i've long since passed the point where all subjectivity is dead to me.
+                        <br>i dread this question, because i've long since passed the point at which all subjectivity has died to me.
                         i don't <i>know</i> what music i like anymore.
                         <br>
-                        <br>so, in an attempt to better understand what music i like, i began compiling this list.
-                        in no order, these are the albums or songs that i find myself coming back to, again and again. this list isn't exhaustive, it's meant to be
-                        updated as time goes on. 
+                        <br>so, i began compiling this list. in no order, these are the albums or songs that i find myself coming back to, again and again.
+                        this list isn't exhaustive, it's meant to be updated as time goes on. 
                     </p>
                 </div>
                 <div class="rightside">
