--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -57,18 +57,16 @@
             </div>
             <br>
             <br>
-            <div class="play-stop">
+            <!-- <div class="play-stop">
                 <button class="play" onclick="startPlaying()">Play</button>
                 <button class="pause" onclick="pausePlaying()">Pause</button>
                 <button class="stop" onclick="stopPlaying()">Stop</button>
-            </div>
+            </div> -->
             <br>
             <div class="reset-dragged">
                 <button onclick="resetDragged()">Reset Positions</button>
-                <br>
-                <br>
-                <button onclick="convolve90()">go button</button>
             </div>
+            <button onclick="playTogether()">convolve test</button>
         </div>
     </div>
 </body>
