--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -57,8 +57,8 @@
             <br>
             <label for="datasets" style="display: block; text-align: center; justify-content: center; align-items: center;">Choose an HRTF profile:</label>
             <select name="datasets" id="dataset-select" style="display: block; margin-left: auto; margin-right: auto;">
-                <option value="separate">MIT (1999)</option>
-                <option value="stereo">Dummy Head 1</option>
+                <option value="separate">MIT KEMAR (1994)</option>
+                <option value="stereo">SADIE KU-100 (2018)</option>
             </select>
             <br>
             <div class="play-convolved">
