added 404s and updated aftw-final/index.html

--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -10,9 +10,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div class='content'>
-        <div class='header'>
-            <div class='links'>
+    <div class="content">
+        <div class="header">
+            <!-- <div class='links'>
                 [ path:
                 <a href="../../">home</a>
                 /
@@ -20,11 +20,12 @@
                 /
                 <a href="/">audio for the web final project</a>
                 ]
-            </div>
+            </div> -->
+            <h1 style="margin-bottom: -20px; margin-top: 0px;">garrett's great mono & stereo <u>c</u>onvolution<u>n</u>ode binaural renderer made with web audio api</h1>
+            <h3>(GGM&SCNBRMWWAA)</h3>
         </div>
         <br>
-        <br>
-        <div class='container'>
+        <div class="container">
             <audio src="./audio/Drums.wav" id="drums"></audio>
             <audio src="./audio/Bass.wav" id="bass"></audio>
             <audio src="./audio/Piano.wav" id="piano"></audio>
@@ -71,5 +72,8 @@
             
         </div>
     </div>
+    <footer>
+        created by garrett.
+    </footer>
 </body>
 </html>
