re-organized files

--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>aftw final project</title>
+    <title>ggm&scnbrmwaa</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='icon' type='image/x-icon' href='../../assets/the-best-fav.gif'>
     <link rel='stylesheet' href='styles.css'>
-    <script src="Sofa.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
     <div class="content">
         <div class="header">
-            <!-- <div class='links'>
-                [ path:
-                <a href="../../">home</a>
-                /
-                <a href='../'>audio for the web</a>
-                /
-                <a href="/">audio for the web final project</a>
-                ]
-            </div> -->
-            <h1 style="margin-bottom: -20px; margin-top: 0px;">garrett's great mono & stereo <u>c</u>onvolution<u>n</u>ode binaural renderer made with web audio api</h1>
+            <h1 style="margin-bottom: -20px; margin-top: 0px;"><a href="../../">garrett</a>'s great mono & stereo <u>c</u>onvolution<u>n</u>ode binaural renderer made with web audio api</h1>
             <h3>(GGM&SCNBRMWWAA)</h3>
         </div>
         <br>
@@ -32,10 +22,6 @@
             <audio src="./audio/Wind.wav" id="sax"></audio>
 
             <div class="instrument-buttons">
-                <!-- <button class="draggable_instrument" draggable="true">Drums</button>
-                <button class="draggable_instrument" draggable="true">Bass</button>
-                <button class="draggable_instrument" draggable="true">Piano</button>
-                <button class="draggable_instrument" draggable="true">Saxophone</button> -->
                 <div class="draggable_instrument" draggable="true" ondragstart="drag(event)" ondragend="dragEnd(event)" style="opacity: 1.0;">Drums</div>
                 <div class="draggable_instrument" draggable="true" ondragstart="drag(event)" ondragend="dragEnd(event)" style="opacity: 1.0;">Bass</div>
                 <div class="draggable_instrument" draggable="true" ondragstart="drag(event)" ondragend="dragEnd(event)" style="opacity: 1.0;">Piano</div>
