--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<h2>welcome to <i>myspace!</i></h2>
 					<p title='there is always a hidden meaning.'><small>this is my second paragraph with no hidden meaning.</small></p>
 					<br>
-					<p>i like to work with music and electronics.</p>
+					<p>i like to work with <a href="fav-music/index.html">music</a> and electronics.</p>
 					<p style="text-align: center; line-height: 0.1;"><small>sometimes combining the two.</small></p>
 					<br>
 					<p>this is where i keep records of my <a href='projects.html'>projects</a>.</p>
@@ -67,7 +67,7 @@
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">15 nov 2024</span>.
+		<span id="lastUpdateDate" style="display: initial;">2 dec 2024</span>.
 	</footer>
 
 </body>
