--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,30 @@
 				</ul>
 			</div>
 			<hr>
-			<!-- entry 1 -->
+			<!-- entry -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<img src='assets/ggm-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>ggm&scnbrmwaa</p>
+					<p style='line-height: 1.0;'><small><i>exactly what it sounds like.</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='aftw/ggm-scnbrmwaa/index.html'>ggm&scnbrmwaa (dec 2024)</a></h2>
+					<p>better than the worst out there.</p>
+					<br>
+					<p style='font-size: 80%;'>get this:	
+						<br>we take a reverb engine,
+						<br>and then we
+						<br>we
+						<br>
+						<br>u in?</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>html, javascript, web audio api, <b>h</b><small>e</small><b>s</b><small>u</small><b>v</b><small>i</small>.</p>
+				</div>
+			</div>
+			<!-- entry 2 -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -61,10 +84,10 @@
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
 					<p style='font-size: 90%;'>microphones: 5 schoeps mk6, 4 sennheiser mkh800, 4 dpa 4011a.
-					<br>other: 2 apogee symphony io mkii.</p>
+					<br>other: 2 apogee symphony i/o mkii.</p>
 				</div>
 			</div>
-			<!-- entry 2 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -84,7 +107,7 @@
 					<p style='font-size: 90%;'>maxmsp.</p>
 				</div>
 			</div>
-			<!-- entry 2 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -104,7 +127,7 @@
 					<p style='font-size: 90%;'>maxmsp, mgba, obs, loopback.</p>
 				</div>
 			</div>
-			<!-- entry 3 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -122,7 +145,7 @@
 					<p style='font-size: 90%;'>neumann ku100, dearvr.</p>
 				</div>
 			</div>
-			<!-- entry 4 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -143,7 +166,7 @@
 					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.' target="_blank">MEAP board</a><br><a href='https://a.co/d/4CRT2Pq' target="_blank">plastic juntion box</a><br><a href='https://a.co/d/7k1CtzN' target="_blank">generic arcade buttons and stick (sanwa clones)</a></p>
 				</div>
 			</div>
-			<!-- entry 5 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -164,7 +187,7 @@
 					<p style='font-size: 90%;'>python<br>libraries: numpy, matplotlib, soundfile, pydub, IPython, tkinter.</p>
 				</div>
 			</div>
-			<!-- entry 6 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -184,7 +207,7 @@
 					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.' target="_blank">MEAP board</a><br>takeaway tupperware container<br><a href='https://a.co/d/1bCcZAN' target="_blank">generic arcade buttons (sanwa clones)</a><br><a href='https://www.adafruit.com/product/166' target="_blank">adafruit force sensitive resistors</a></p>
 				</div>
 			</div>
-			<!-- entry 7 -->
+			<!-- entry -->
 			<br>
 			<div class='flex-container'>
 				<div class='leftside'>
@@ -207,8 +230,6 @@
 		</div>
 	</div>
 	<footer>
-		<!-- <img id="dither_button" onclick="backToOriginal()" src="assets/dither-toggle-button.png"> -->
-		<!-- <br> -->
 		created by garrett.	
 	</footer>
 
