changed links around

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 					<p style='line-height: 1.0;'><small><i>exactly what it sounds like.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='aftw/ggm-scnbrmwaa/index.html'>ggm&scnbrmwaa (dec 2024)</a></h2>
+					<h2><a href='aftw/aftw-final/index.html'>ggm&scnbrmwaa (dec 2024)</a></h2>
 					<p>better than the worst out there.</p>
 					<br>
 					<p style='font-size: 80%;'>get this:	
