--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 			<p style='text-align: center;'>do not contact me.</p>
 			<br>
 			<br>
-			<p style='text-align: center;'><a href='mailto:garrettkft@outlook.com' style='color: black;'>email.<br><br>disclaimer: outlook sends a lot of things to junk. apologies if i am late in replying.</a></p>
+			<p style='text-align: center;'><a href='mailto:hytheaway@gmail.com' style='color: black;'>email.</a></p>
 			<br>
 		</div>
 	</div>
