--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -14,13 +14,14 @@
             <h1 style="margin-bottom: -20px; margin-top: 0px;"><a href="../../">garrett</a>'s great mono & stereo <u>c</u>onvolution<u>n</u>ode binaural renderer made with web audio api</h1>
             <h3>(GGM&SCNBRMWWAA)</h3>
         </div>
-        <br>
         <div class="container">
             <audio src="./audio/Drums.wav" id="drums"></audio>
             <audio src="./audio/Bass.wav" id="bass"></audio>
             <audio src="./audio/Piano.wav" id="piano"></audio>
             <audio src="./audio/Wind.wav" id="sax"></audio>
-
+            <div style="display: block; text-align: center; margin-top: -10px; margin-bottom: 10px;">
+                please use headphones.
+            </div>
             <div class="instrument-buttons">
                 <div class="draggable_instrument" draggable="true" ondragstart="drag(event)" ondragend="dragEnd(event)" style="opacity: 1.0;">Drums</div>
                 <div class="draggable_instrument" draggable="true" ondragstart="drag(event)" ondragend="dragEnd(event)" style="opacity: 1.0;">Bass</div>
@@ -40,16 +41,15 @@
                     <button class="circle-button" ondrop="drop(event)" ondragover="allowDrop(event)">8</button>
                 </div>
             </div>
-            <span id="statusText" style="display: block; text-align: center; justify-content: center; align-items: center;">Not Playing</span>
-            <br>
+            <span id="statusText" style="display: block; text-align: center; justify-content: center; align-items: center; margin-bottom: 5px;">Not Playing</span>
             <label for="datasets" style="display: block; text-align: center; justify-content: center; align-items: center;">Choose an HRTF profile:</label>
-            <select name="datasets" id="dataset-select" style="display: block; margin-left: auto; margin-right: auto;">
+            <select name="datasets" id="dataset-select" style="display: block; margin-left: auto; margin-right: auto; margin-bottom: -10px;">
                 <option value="separate">MIT KEMAR (1994)</option>
                 <option value="stereo">SADIE KU-100 (2018)</option>
             </select>
             <br>
             <div class="play-convolved">
-                <button onclick="playTogether()">Play</button>
+                <button style="margin-bottom: -10px;" onclick="playTogether()">Play</button>
             </div>
             <br>
             <div class="reset-dragged">
