updated 404.html and removed redundant

--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <title>1337 sp3@k!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='http://hytheaway.github.io/assets/the-best-fav.gif'>
+    <link rel='icon' type='image/x-icon' href='https://hytheaway.github.io/assets/the-best-fav.gif'>
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-    <link rel='stylesheet' href='http://hytheaway.github.io/styles.css'>
+    <link rel='stylesheet' href='https://hytheaway.github.io/styles.css'>
 </head>
 
 <body>
@@ -30,13 +30,13 @@
             </div>
             <div class='navigationbar'>
                 <ul>
-                    <li><a href='http://hytheaway.github.io'>home</a></li>
+                    <li><a href='https://hytheaway.github.io'>home</a></li>
                     |
-                    <li><a href='http://hytheaway.github.io/projects.html'>projects</a></li>
+                    <li><a href='https://hytheaway.github.io/projects.html'>projects</a></li>
                     |
-                    <li><a href='http://hytheaway.github.io/journal.html'>journal</a></li>
+                    <li><a href='https://hytheaway.github.io/journal.html'>journal</a></li>
                     |
-                    <li><a href='http://hytheaway.github.io/contact.html'>contact</a></li>
+                    <li><a href='https://hytheaway.github.io/contact.html'>contact</a></li>
                 </ul>
             </div>
             <hr>
@@ -46,12 +46,12 @@
             <h2 style="text-align: center;">page not found.</h2>
             <br>
             <p style="text-align: center;">hello.
-            <br>if you've managed to stumble across this page, please report it by reaching out to me <a href="http://hytheaway.github.io/contact.html">here</a>.
+            <br>if you've managed to stumble across this page, please report it by reaching out to me <a href="https://hytheaway.github.io/contact.html">here</a>.
             <br>
             <br>
             <br>please don't fret. follow the wise words of our ancestors:
             <br>
-            <br><img src="http://hytheaway.github.io/assets/happyday.jpeg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
+            <br><img src="https://hytheaway.github.io/assets/happyday.jpeg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
             <!-- end writing here -->
         </p>
         </div>
