--- a/aftw/aftw-final/index.html
+++ b/aftw/aftw-final/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="content">
         <div class="header">
-            <h1 style="margin-bottom: -20px; margin-top: 0px;"><a href="../../">garrett</a>'s great mono & stereo <u>c</u>onvolution<u>n</u>ode binaural renderer made with web audio api</h1>
+            <h1 style="margin-bottom: -20px; margin-top: 0px;"><a href="../../">garrett</a>'s great mono & stereo <u>c</u>onvolver<u>n</u>ode binaural renderer made with web audio api</h1>
             <h3>(GGM&SCNBRMWWAA)</h3>
         </div>
         <div class="container">
@@ -61,7 +61,6 @@
             
         </div>
     </div>
-    <button onclick="progressBarFunc()">test</button>
     <footer>
         created by garrett.
     </footer>
