--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 	<footer>
 		created by garrett.
 		<br>
-		<br>this website is designed to be viewed on desktop. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">2 dec 2024</span>.
+		<br>this website is designed to be viewed on desktop with the firefox browser. | last updated:
+		<span id="lastUpdateDate" style="display: initial;">19 dec 2024</span>.
 	</footer>
 
 </body>
