--- a/projects/aoifernet.html
+++ b/projects/aoifernet.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>title</title>
+    <title>aoifernet</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
@@ -17,9 +17,9 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='../projects.html'>path1</a>
+                <a href='../projects.html'>projects</a>
                 /
-                <a href="projects-template.html">path2</a>
+                <a href="aoifernet.html">aoifernet/m3--</a>
                 ]
             </div>
         </div>
@@ -41,19 +41,76 @@
             </div>
             <hr>
             <!-- begin writing here -->
-            <br>
-            <p style="text-align: center;">hello.
-            <br>if you've managed to stumble across this page, congratulations.
-            <br>this is where i keep my template for my projects pages. :)
-            <br>
-            <br>if you've reached this page in error, please report it by reaching out to me <a href="../contact.html">here</a>.
-            <br>
-            <br>on the off chance that you are actually me, please keep the following notes in mind:
-            <br>remember to change the page title.
-            <br>remember to change the path.
-            <br>
-            <br>and, of course
-            <br><img src="../assets/happyday.jpeg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
+            <h2 style="text-align: center;">m<sup>3</sup>-- (dec 2024)</h2>
+            <p style="text-align: center;">or the <i>"aoifernet"</i>.
+                <br><a href="https://github.com/hytheaway/m3--" target="_blank">github</a> | <a href="https://www.youtube.com/watch?v=V98xpMO-TKc" target="_blank">youtube demo</a>
+            </p>
+            <div class="flex-container">
+                <div class="leftside">
+                    <p class="mobileCenterText" style="font-size: 70%; text-align: center;">
+                        honestly, i didn't really want to make this.
+                        <br>and i don't see a reason for me to act like i did.
+                        <br>
+                        <br>between us, i went into this semester trepidatious. i needed to be enrolled in a lot of classes to keep my scholarship, and one class focused on
+                        designing a product within the world of music technology. i was stoked about this, i had been wanting to build a binaural rendering hardware device
+                        for ages and i thought this was a great way to do it.
+                        <br>
+                        <br>my idea got shot down immediately. at first, i thought that it was too ambitious, so i inquired about reducing the scope, but that got shot down,
+                        too. i was informed that my project idea was, effectively, not flashy enough. that it was too functional. i don't know about you, but i feel like most
+                        commerical audio products aren't flashy, they're functional.
+                        <br>i was asked if i had anything else, any other project. 
+                        <br>
+                        <br>realizing that this semester would be packed for me, i offered a project that i had already completed, but prefaced by saying that i wasn't super
+                        interested in revisiting it. despite that, i was told to throw my efforts on this project.
+                        <br>
+                        <br>so, here it is. the m<sup>3</sup>--.
+                        <br>does it look familiar to you?
+                        <br>
+                        <br>maybe. but i'll let you in on this: it's just a double upgraded cerial v2. or maybe side-graded? it gets confusing.
+                        <br>
+                        <br>let's start with the name, and what i mean by "double up/side-graded". there's a project of mine that you've never seen.
+                        <br>i didn't mean to keep it from you, honest. it just... never came up in conversation.
+                        <br>
+                        <br>at some point, i'll actually finish the write up for it, but that project was the m<sup>3</sup>, the mini midi manipulator. famous for being not mini,
+                        using not midi, and arguably probably not manipulating. the m<sup>3</sup> was a lot more of an obvious progression to the cerial, using the meap v3 board.
+                        so, just as c++ is to c, the m<sup>3</sup>-- is to the m<sup>3</sup>.
+                        <br>
+                        <br>i've also got a cat named aoife, and when designing the pcb, i replaced the term "ethernet" with "aoifernet". and i love it.
+                        <br>
+                        <br>---
+                        <br>
+                        <br>so what is it? what does it do?
+                        <br>well, kind of anything you want it to. and that's by design.
+                        <br>all the audio and music processing occurs on the on-board teensy, which can be connected to the equally on-board mini pc.
+                        <br>that mini pc is running full windows 11, so you can actively re-program the teensy to make it do whatever you want. you don't even need to press the reset
+                        switch on the teensy itself.
+                        <br>
+                        <br>there are a total of twelve buttons and a standard ssd1306 oled screen that can be drawn to. these buttons can do whatever you want, as long as you program it.
+                        by default, the wasd movement corresponds to up, down, left, and right, and each of the buttons are assigned to a, b, x, y, lb, lt, rb, and rt.
+                        <br>
+                        <br>it's more of a platform rather than anything else, and all the necessary files you'd need to recreate this can be found on my github <a href="https://github.com/hytheaway/m3--" target="_blank">here</a>.
+                        <br>
+                        <br>but, if you're interested, <a href="https://www.youtube.com/watch?v=V98xpMO-TKc" target="_blank">i've included a small demo that i made of it</a>.
+                        <br>
+                        <br>---
+                        <br>
+                        <br>i'm kind of burnt out on this project for a bit. it's not as interesting or invigorating to me anymore, and i'm not the best at making a creative
+                        application with this kind of idea.
+                        <br>if you're reading this, far in the future or far in the not future, i'm sure you could find a good use for it.
+                        <br>
+                        <br>
+                        <br>
+                        <br>on the bright side, it does play doom.
+                    </p>
+                </div>
+                <div class="rightsidecenter" style="display: block; align-items: center; justify-content: center;">
+                    <img src="../assets/m3--_fully_working-dither.jpg" class="borderimg1class" style="max-width: 50%; max-height: 100vh;">
+                    <br>
+                    <img src="../assets/m3--_keyboard-dither.jpg" class="borderimg1class" style="max-width: 40%; max-height: 100vh;">
+                    <br>
+                    <iframe class="borderimg1class" id="pkmnVideo" width="560" height="315" src="https://www.youtube.com/embed/V98xpMO-TKc?si=64XJuxHYPn26AYL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
             <!-- end writing here -->
         </p>
         </div>
