--- a/projects/fourierifier.html
+++ b/projects/fourierifier.html
@@ -48,7 +48,7 @@
             <div id="fourierifierFlexContainer" class="flex-container">
                 <div class="leftside" id="pkmnLeftSideText">
                     <br>
-                    <iframe id="pkmnVideo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/f8CTX8Tqclg?si=39Xe85C359U0jz9N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="borderimg1class" id="pkmnVideo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/f8CTX8Tqclg?si=39Xe85C359U0jz9N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <!-- i think this literally only works because the image is higher res. than the space it's placed - idk what happens on higher res. displays -->
                 </div>
                 <div class="rightside" id="fourierifierRightSide">
