--- a/projects/pkmnmaxmsp.html
+++ b/projects/pkmnmaxmsp.html
@@ -48,7 +48,7 @@
             <div class="flex-container">
                 <div class="leftside" id="pkmnLeftSideText">
                     <br>
-                    <iframe id="pkmnVideo" style="float: left; position: relative; top: 15%; left: 2%;" width="448" height="252" src="https://www.youtube-nocookie.com/embed/AFi1Px7UF9E?si=RLHygyfYmIistpI2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="borderimg1class" id="pkmnVideo" style="float: left; position: relative; top: 15%; left: 0.5%;" width="448" height="252" src="https://www.youtube-nocookie.com/embed/AFi1Px7UF9E?si=RLHygyfYmIistpI2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <!-- i think this literally only works because the image is higher res. than the space it's placed - idk what happens on higher res. displays -->
                     <img class="hoverZoomImage" id="pkmnImage" src="../assets/pkmnMaxMSP.jpg" style=" float: right; position: relative; max-width: 40%; max-height: 100vh; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
                 </div>
