--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
                 /
                 <a href=''>uh oh</a>
                 /
-                <a href=''>seems like you're not supposed to be here</a>
+                <a href=''>you're not supposed to be here</a>
                 ]
             </div>
         </div>
