--- a/projects/aoifernet.html
+++ b/projects/aoifernet.html
@@ -21,6 +21,7 @@
                 /
                 <a href="aoifernet.html">aoifernet/m3--</a>
                 ]
+                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
             </div>
         </div>
         <div class='container'>
@@ -119,6 +120,29 @@
     <footer>
         created by garrett.
     </footer>
+
+    <script>
+        var projectImageList = document.getElementsByClassName('borderimg1class');
+        var ditherButton = document.getElementById('dither_button');
+
+        function backToOriginal() {
+            for (let i = 0; i < projectImageList.length; i++) {
+                var currentSource = String(projectImageList[i].src);
+                ditheredString = currentSource.replace('-dither', '');
+                projectImageList[i].src = ditheredString;
+            }
+            ditherButton.onclick = replaceWithDither;
+        }
+        
+        function replaceWithDither() {
+            for (let i = 0; i < projectImageList.length; i++) {
+                var currentSource = String(projectImageList[i].src);
+                ditheredString = currentSource.slice(0,currentSource.length-4)+'-dither'+currentSource.slice(currentSource.length-4);
+                projectImageList[i].src = ditheredString;
+            }
+            ditherButton.onclick = backToOriginal;
+        }
+    </script>
 
 </body>
 
