added gghsf.html, updated projects.html

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,32 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
+					<img src='assets/gghsf_main-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>ggh&sf</p>
+					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs"</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='projects/gghsf.html'>ggh&sf</a></h2>
+					<p>probably the first useful thing i've ever done.</p>
+					<br>
+					<p style='font-size: 80%;'>
+						<i>has this ever happened to you?</i>
+						<br>drudging through measurement after measurement,
+						<br>typing the same command over and over,
+						<br>when was the last time you saw your kids?
+						<br>there's got to be a better way!
+					</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>python, my brain.
+						<br>libraries: numpy, matplotlib, soundfile, python-sofa, librosa, scipy, IPython, tkinter, pygame, pyinstaller, PyQt6.
+					</p>
+				</div>
+			</div>
+			<!-- entry -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
 					<img src='assets/m3--_fully_working-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>m3--</p>
 					<p style='line-height: 1.0;'><small><i>aoifernet is a cuter name.</i></small></p>
