--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs"</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='projects/gghsf.html'>ggh&sf</a></h2>
+					<h2><a href='projects/gghsf.html'>ggh&sf (may 2025)</a></h2>
 					<p>probably the first useful thing i've ever done.</p>
 					<br>
 					<p style='font-size: 80%;'>
