--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,29 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
+					<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>ggec</p>
+					<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='projects/ggec.html'>ggec (may 2025)</a></h2>
+					<p>it's just a clock.</p>
+					<br>
+					<p style='font-size: 80%;'>
+						i wanted a clock.
+						<br>i didn't want to buy a clock.
+						<br>i made a clock.
+					</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>esp32, ssd1306.
+					</p>
+				</div>
+			</div>
+			<!-- entry -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
 					<img src='assets/gghsf_main-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggh&sf</p>
 					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs"</i></small></p>
