font resize and typo correction

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 				<div class='leftside'>
 					<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggec</p>
-					<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c</i></small></p>
+					<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c.</i></small></p>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/ggec.html'>ggec (may 2025)</a></h2>
@@ -70,7 +70,7 @@
 				<div class='leftside'>
 					<img src='assets/gghsf_main-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggh&sf</p>
-					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs"</i></small></p>
+					<p style='line-height: 1.0;'><small><i>just like ai, if ai stood for "analyzing i-hrtfs".</i></small></p>
 				</div>
 				<div class='rightside'>
 					<h2><a href='projects/gghsf.html'>ggh&sf (may 2025)</a></h2>
